fixed(styles): fixed keyboard nav, visible focus, icons adaptative size in mobile mode and main padding to avoid mobile footer nav bar to mask content.

--- a/styles.sass
+++ b/styles.sass
@@ -109,16 +109,17 @@ button
     > img
         filter: $icons-bg-color
 
+
 body
     @include atkinson-hyperlegible-regular
-    background-color: grey
+    background-color: $bg-color
     background-size: 100vw
     color: $text-color
     display: flex
     flex-direction: column
     padding: 0 0
     margin: 0
-    padding-bottom: 145px
+    padding-bottom: 150px
     > header
         margin: 0
         background-color: $header-bg-color
@@ -151,8 +152,7 @@ body
             right: 15px
             width: 20px
             filter: $icons-bg-color
-        > button
-            display: none
+            pointer-events: none
         .desktop-barnav
             display: none
 
@@ -172,7 +172,7 @@ h3
     padding-left: 5%
 
 a
-    all: unset
+    text-decoration-line: none
     color: $a-color
     &:hover
         color: $a-hover-color
@@ -184,7 +184,8 @@ a
 main
     background-color: $main-bg-color
     p
-        padding-left: 10%
+        padding-left: 10vw
+        padding-right: 10vw
 
 footer
     background-color: $footer-bg-color
@@ -212,6 +213,9 @@ ul
         align-items: flex-end
     p
         color: $text-color
+    img
+        width: 7vw
+        max-width: 40px
 
 .desktop-footer-nav
     display: none
@@ -258,13 +262,17 @@ ul
             > img
                 top: 25px
                 right: 55px
+
             > button
                 display: block
-                all: unset
                 position: absolute
                 top: 25px
                 right: 15px
                 width: 20px
+                padding: 0
+                border: none
+                background: none
+                box-shadow: none
                 &:hover
                     background: none
                     box-shadow: none
